--- a/LibraryManagementSystem.MvcWebUI/Views/Book/Index.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Book/Index.cshtml
@@ -1,6 +1,11 @@
-﻿@model List<LibraryManagementSystem.Entities.Concrete.Book>
+﻿@using LibraryManagementSystem.Entities.ComplexTypes;
+@model List<BookDetail>
 @{
 }
+
+<div class="text-center">
+	<div class="font-weight-bold h3" style="margin: 25px 0 25px 0">Books</div>		
+</div>
 
 @for (int i = 0; i < Model.Count; i++)
 {
@@ -22,11 +27,12 @@
 			</div>
 			<div class="card-body">
 				<div class="text-center">
-					<small class="text-muted">Author: @Model[i].Author.AuthorName</small>
+					<small class="text-muted">Author: @Model[i].AuthorName</small>
 					<ul class="list-unstyled mt-3 mb-4">
 						<li>Published Year: @Model[i].PublishedYear</li>
 						<li>Shelf: @Model[i].ShelfNumber</li>
 						<li>Availability: @Model[i].AvailableState</li>
+						<li>Genre: @Model[i].GenreName</li>
 						<li>@Model[i].BookId</li>
 					</ul>
 					<button type="button" class="btn btn-lg btn-block btn-outline-primary">Details</button>
