--- a/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
@@ -32,9 +32,9 @@
 	</main>
 </div>
 
-<footer class="footer" style="background-color: cadetblue; margin: 0px; height: 150px; margin-bottom: -150px">
+<footer class="mt-auto">
 	<div class="container">
-		<span class="text-muted ">&copy; 2022-2023 Library Management System</span>
+		<div class="text-center text-white" style="font-size: 18px">&copy; 2022-2023 Library Management System</div>
 	</div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
