New pages and methods for Web UI

--- a/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
 					</li>
 				</ul>
 			</div>
+			<div style="margin-right: 3%">
+				<a asp-area="" asp-controller="User" asp-action="SignUp" class="btn btn-success btn-lg">SignUp</a>
+			</div>
 		</div>
 	</nav>
 </header>
