--- a/LibraryManagementSystem.MvcWebUI/Views/User/Index.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/User/Index.cshtml
@@ -2,15 +2,5 @@
 }
 
 <div class="text-center">
-	<div class="font-weight-bold h3" style="margin: 25px 0 25px 0">Translators</div>		
-</div>
-
-<div class="col-md-6">
-	<div class="card mb-4 box-shadow">
-		<div class="card-body">
-			<div class="text-center">
-				<div class="text-muted">Succesfully signed up!</div>
-			</div>
-		</div>
-	</div>
+	<div class="font-weight-bold h3" style="margin: 25px 0 25px 0">Successfully signed up!</div>		
 </div>
