--- a/LibraryManagementSystem.MvcWebUI/Views/Book/add.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Book/add.cshtml
@@ -74,7 +74,7 @@
 			</div>
 
 			<div class="d-flex justify-content-center">
-			<button class="btn btn-success btn-lg btn-block" style="width: 250px; height: 75px" type="submit">Save</button>
+			<button class="btn btn-outline-success btn-lg btn-block" style="width: 250px; height: 75px" type="submit">Save</button>
 			</div>
 		</form>
 	</div>
