--- a/LibraryManagementSystem.MvcWebUI/Views/User/signup.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/User/signup.cshtml
@@ -78,7 +78,7 @@
 				</div>
 
 				<div class="d-flex justify-content-center">
-				<button class="btn btn-success btn-lg btn-block" style="width: 250px; height: 75px" type="submit">Sign Up</button>
+				<button class="btn btn-outline-success btn-lg btn-block" style="width: 250px; height: 75px" type="submit">Sign Up</button>
 				</div>
 			</form>
 		</div>
