--- a/LibraryManagementSystem.MvcWebUI/Views/Home/Index.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Home/Index.cshtml
@@ -2,33 +2,26 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="jumbotron" style="margin: 5% 10% 5% 10%">
-        <div class="container">
-          <h1 class="display-3" style="margin-bottom: 3%">Online Library</h1>
-          <p>Welcome to the online library. Have fun!!</p>
+<div style="margin: 5% 10% 5% 10%">
+    <div class="container">
+        <h1 class="display-3" style="margin-bottom: 3%">Online Library</h1>
+        <p>Welcome to the online library. Have fun!!</p>
+    </div>
+</div>
+
+<div class="container" style="margin: 15% 0 10% 0">
+    <div class="row">
+        <div class="col-md-4">
+        <h2>Explore</h2>
+        <p>Explore our library and large content.</p>
         </div>
-      </div>
-
-      <div class="container" style="margin: 10% 0 10% 0">
-        <!-- Example row of columns -->
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
+        <div class="col-md-4">
+        <h2>Books</h2>
+        <p>We sure that you can find a book that you will like.</p>
         </div>
-
-        <hr>
-
-      </div> <!-- /container -->
+        <div class="col-md-4">
+        <h2>Free</h2>
+        <p>Don't wait sign up free and reach contents.</p>
+        </div>
+    </div>
+</div>
