--- a/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
 					</li>
 				</ul>
 			</div>
+			<div style="margin-right: 1%">
+				<a asp-area="" asp-controller="User" asp-action="SignIn" class="btn btn-success btn-lg">SignIn</a>
+			</div>
 			<div style="margin-right: 3%">
 				<a asp-area="" asp-controller="User" asp-action="SignUp" class="btn btn-success btn-lg">SignUp</a>
 			</div>
