--- a/LibraryManagementSystem.MvcWebUI/Views/Book/add.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Book/add.cshtml
@@ -30,6 +30,20 @@
 						Valid last name is required.
 					</div>
 				</div>
+				<div class="col-md-6 mb-3">
+					<label asp-for="TranslatorId">Translator Id</label>
+					<input asp-for="TranslatorId" class="form-control" value="" required>
+					<div class="invalid-feedback">
+						Valid last name is required.
+					</div>
+				</div>
+				<div class="col-md-6 mb-3">
+					<label asp-for="GenreId">Translator Id</label>
+					<input asp-for="GenreId" class="form-control" value="" required>
+					<div class="invalid-feedback">
+						Valid last name is required.
+					</div>
+				</div>
 			</div>
 
 			<div class="mb-3">
