--- a/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
@@ -23,12 +23,24 @@
 					</li>
 				</ul>
 			</div>
-			<div style="margin-right: 1%">
-				<a asp-area="" asp-controller="User" asp-action="SignIn" class="btn btn-success btn-lg">SignIn</a>
-			</div>
-			<div style="margin-right: 3%">
-				<a asp-area="" asp-controller="User" asp-action="SignUp" class="btn btn-success btn-lg">SignUp</a>
-			</div>
+			@if (!User.Identity.IsAuthenticated)
+			{
+				<div style="margin-right: 1%">
+					<a asp-area="" asp-controller="Account" asp-action="SignIn" class="btn btn-success btn-lg">Login</a>
+				</div>
+				<div style="margin-right: 3%">
+					<a asp-area="" asp-controller="Account" asp-action="SignUp" class="btn btn-success btn-lg">Register</a>
+				</div>
+			}
+			else
+			{
+				<div style="margin-right: 3%">
+					<a asp-area="" asp-controller="Account" asp-action="Dashboard" class="btn btn-success btn-lg">Dashboard</a>
+				</div>
+				<div style="margin-right: 3%">
+					<a asp-area="" asp-controller="Account" asp-action="LogOut" class="btn btn-success btn-lg">Logout</a>
+				</div>
+			}
 		</div>
 	</nav>
 </header>
