--- a/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 			@if (User.Identity.IsAuthenticated)
 			{
 				<div style="margin-right: 1%">
-					<a asp-area="" asp-controller="Account" asp-action="Dashboard" class="btn btn-success btn-lg">Dashboard</a>
+					<a asp-area="" asp-controller="Dashboard" asp-action="Index" class="btn btn-success btn-lg">Dashboard</a>
 				</div>
 				<div style="margin-right: 3%">
 					<a asp-area="" asp-controller="Account" asp-action="LogOut" class="btn btn-success btn-lg">Logout</a>
