User extend time added and some changes

--- a/LibraryManagementSystem.MvcWebUI/Views/Dashboard/AdminList.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Dashboard/AdminList.cshtml
@@ -15,7 +15,7 @@
             <a asp-area="" asp-controller="Account" asp-action="ModeratorRegister" class="btn btn-outline-success btn-lg">Add Moderator</a>
         </div>
         <div style="">
-            <a asp-area="" asp-controller="Dashboard" asp-action="AdminList" class="btn btn-outline-success btn-lg">Show Authorized Users</a>
+            <a asp-area="" asp-controller="Dashboard" asp-action="Index" class="btn btn-outline-success btn-lg">Show Users</a>
         </div>
     </div>
 
