--- a/LibraryManagementSystem.MvcWebUI/Views/Dashboard/Index.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Dashboard/Index.cshtml
@@ -17,11 +17,12 @@
 {
     <h1>Dashboard</h1>
     <div class="text-center" style="font-size: 32px">
-            <strong>Debt: </strong> @ViewBag.UserDebt <br>
+        <strong>Debt: </strong> @ViewBag.UserDebt <br>
         Please pay your debt on time.
     </div>
-    <div class="text-center" style="font-size: 32px">
-            <strong>Borrowed Book Count: </strong> @ViewBag.UserBookCount <br>
+    <div class="text-center" style="font-size: 32px; margin-top: 2%">
+        <strong>Borrowed Book Count: </strong> @ViewBag.UserBookCount <br>
+        Read more books.
     </div>
     <div class="btn-group" style="margin-top: 10%">
     <div style="margin-right: 20px">
