--- a/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.MvcWebUI/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
 					<a asp-area="" asp-controller="Dashboard" asp-action="Index" class="btn btn-success btn-lg">Dashboard</a>
 				</div>
 				<div style="margin-right: 3%">
-					<a asp-area="" asp-controller="Account" asp-action="LogOut" class="btn btn-success btn-lg">Logout</a>
+					<a asp-area="" asp-controller="Account" asp-action="LogOut" class="btn btn-danger btn-lg">Logout</a>
 				</div>
 			}
 			else
